# face-detection

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
face_detection/: asgi.py  routing.py  settings.py  settings_test.py  urls.py  wsgi.py
face_detector/: consumers.py  detector.py  urls.py  views.py
tests/: conftest.py
tests/face_detection/: test_asgi.py
tests/face_detector/: test_consumers.py  test_detector.py
